Fix grid scrollbar issue

--- a/src/app/listing/listing.component.scss
+++ b/src/app/listing/listing.component.scss
@@ -33,7 +33,7 @@
 
 .beerlist {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-auto-rows: minmax(160px, auto);
   grid-gap: 27px;
   margin: 0 0 110px;
